# audiohash

./: aucompare.c  audioreader.h  capi.h  compare.cpp  compare.h  fft.h  hashcalculator.h
doc/: api.md
src/: CMakeCache.txt  CMakeLists.txt  Makefile  Spectral.cpp  Spectral.h  aucompare  aucompare.c  aucompare.cpp  audioreader.cpp  audioreader.h  capi.cpp  capi.h  cmake_install.cmake  compare.cpp  compare.h  compareaudio.cpp  compareaudio.h  error.cpp  error.h  fft.cpp  fft.h  hashcalculator.cpp  hashcalculator.h  libaudiohash.dylib
